# grougalorasalar

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CURRENT_STATUS.md  DECISIONS.md  DEFECT_BACKLOG.md  GROUGALORASALAR_SOLVER_MASTER_v0.9.0.md  KNOWN_LIMITATIONS.md  MANIFEST.sha256  MASTER_SPEC.md  Makefile  NEXT_STEP.md  PERF_PATCH_REPORT.md  README.md  TEST_REPORT.md  apply_capture_diagnostics_patch.py  apply_capture_ui_update.py  apply_frontend_only_api_boundary_patch.py  apply_frontend_only_deep_wiring_scan_patch.py  apply_frontend_only_migration_scaffold.py  apply_frontend_only_runtime_bridge_patch.py  apply_performance_patch.py  apply_recommendation_perf_patch_v2.py  apply_resolution_robustness_update.py  apply_safe_backend_perf_patch.py  apply_spell_rules_patch.py  docker-compose.yml  repair_perf_patch_v2.py  repair_perf_patch_v3_disable_gzip.py
services/api/: Dockerfile  pyproject.toml  requirements.txt  run.py
services/api/grougal_solver/: __init__.py  api_models.py  app.py  arena.py  capture_diagnostics.py  editor.py  fast_recognition.py  fight_state.py  fixtures.py  glyph_features.py  image_ingest.py  overlay.py  perf_runtime.py  pillar_completeness.py  profiles.py  recognition.py  recommendation_validator.py  session_store.py  solver.py  solver_perf.py  spellbar.py  turn_analysis.py  util.py
services/api/tests/: test_api_vertical_slice.py  test_canonical_arena.py  test_charge_preservation_ranking.py  test_editor.py  test_fast_recognition.py  test_fight_sequence_metadata.py  test_fight_state.py  test_ingest_privacy.py  test_solver_contract.py  (+12 more)
(+216 files in other folders)
