[project]
name = "grougalorasalar-solver-api"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.128,<1",
  "uvicorn[standard]>=0.48,<1",
  "pydantic>=2.13,<3",
  "pillow>=12,<13",
  "python-multipart>=0.0.20,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
